--- a/src/04. components/interface/_navigation.scss
+++ b/src/04. components/interface/_navigation.scss
@@ -5,16 +5,22 @@ body:not(.cancel-nav-item-color) {
   --nav-item-color-hover: var(--res-bg4);
   --nav-item-color-active: var(--res-bg4);
   --nav-item-color-selected: var(--res-bg4);
+  --nav-heading-color-collapsed-hover: var(--res-bg4);
 }
 
-body:not(.cancel-nav-item-rotate) .tree-item-self:hover {
+body:not(.cancel-nav-item-rotate)
+  .tree-item:not(.graph-control-section)
+  .tree-item-self:hover {
   transform: scale(1.05) rotate(1deg);
 }
 
-body:not(.cancel-nav-item-color) {
+body:not(.cancel-nav-item-color) .tree-item:not(.graph-control-section) {
   .tree-item-self {
     &:hover {
       box-shadow: 3px 3px 0px #222222e8;
+      .tree-item-inner-subtext {
+        color: var(--res-bg4);
+      }
     }
 
     &.is-active:not(.is-selected) {
@@ -66,7 +72,7 @@ body:not(.cancel-nav-item-color) {
 }
 
 // Adjust the font weight of folder titles
-.tree-item-self.nav-folder-title {
+.tree-item-self:is(.nav-folder-title, .mod-collapsible) {
   font-weight: bold;
   --nav-item-weight-hover: bold;
 }
