--- a/src/04. components/interface/_tab.scss
+++ b/src/04. components/interface/_tab.scss
@@ -2,4 +2,5 @@
   --icon-color-focused: var(--res-bg4);
   --tab-text-color-focused-active-current: var(--res-bg4);
   --background-modifier-hover: var(--res-tx-accent);
+  --tab-text-color-focused-active: var(--res-bg4);
 }
