--- a/theme.css
+++ b/theme.css
@@ -1809,19 +1809,6 @@ body.bg-tune-override {
    阴影重置 
    ============================================================ */
 body {
-  --shadow-xs: none;
-  --shadow-s: none;
-  --shadow-l: none;
-  --shadow-edges: none;
-}
-
-.theme-light,
-.theme-dark {
-  --input-shadow: none;
-  --input-shadow-hover: none;
-  --button-shadow: none;
-  --pdf-shadow: none;
-  --pdf-thumbnail-shadow: none;
   --bases-cards-shadow: none;
   --tab-stacked-shadow: none;
   --tab-switcher-preview-shadow: none;
@@ -1834,6 +1821,20 @@ body {
   --prompt-shadow: none;
 }
 
+.theme-light,
+.theme-dark {
+  --shadow-xs: none;
+  --shadow-s: none;
+  --shadow-l: none;
+  --shadow-edges: none;
+  --input-shadow: none;
+  --input-shadow-hover: none;
+  --button-shadow: none;
+  --background-modifier-box-shadow: none;
+  --pdf-shadow: none;
+  --pdf-thumbnail-shadow: none;
+}
+
 .modal,
 .menu,
 .vertical-tab-content-container,
@@ -1842,7 +1843,6 @@ body {
 .prompt,
 .file-embed,
 .markdown-embed {
-  box-shadow: none !important;
   border: 1px solid var(--background-modifier-border);
 }
 
@@ -2078,9 +2078,9 @@ table {
   --table-header-weight: var(--res-font-th-weight);
   --table-header-background: rgba(var(--res-ax0-rgb), 0.35);
   --table-header-background-hover: var(--table-header-background);
-  --table-row-alt-background: var(--res-bg1);
-  --table-row-background-hover: var(--res-bg3);
-  --table-row-alt-background-hover: var(--res-bg3);
+  --table-row-alt-background: var(--res-bg2);
+  --table-row-background-hover: var(--res-bg4);
+  --table-row-alt-background-hover: var(--res-bg4);
   --table-column-first-border-width: 0px;
   --table-column-last-border-width: 0px;
   --table-row-first-border-width: 0px;
@@ -2559,53 +2559,57 @@ body.theme-dark {
 
 body:not(.cancel-nav-item-color) {
   --nav-item-background-hover: var(--color-accent);
-  --nav-item-background-active: var(--color-accent);
+  --nav-item-background-active: var(--res-tx-accent);
   --nav-item-background-selected: var(--res-tx-accent);
   --nav-item-color-hover: var(--res-bg4);
   --nav-item-color-active: var(--res-bg4);
   --nav-item-color-selected: var(--res-bg4);
+  --nav-heading-color-collapsed-hover: var(--res-bg4);
 }
 
-body:not(.cancel-nav-item-rotate) .tree-item-self:hover {
+body:not(.cancel-nav-item-rotate) .tree-item:not(.graph-control-section) .tree-item-self:hover {
   transform: scale(1.05) rotate(1deg);
 }
 
-body:not(.cancel-nav-item-color) .tree-item-self:hover {
+body:not(.cancel-nav-item-color) .tree-item:not(.graph-control-section) .tree-item-self:hover {
   box-shadow: 3px 3px 0px rgba(34, 34, 34, 0.9098039216);
 }
-body:not(.cancel-nav-item-color) .tree-item-self.is-active:not(.is-selected) {
+body:not(.cancel-nav-item-color) .tree-item:not(.graph-control-section) .tree-item-self:hover .tree-item-inner-subtext {
+  color: var(--res-bg4);
+}
+body:not(.cancel-nav-item-color) .tree-item:not(.graph-control-section) .tree-item-self.is-active:not(.is-selected) {
   font-weight: bold;
   box-shadow: 3px 3px 0px rgba(15, 15, 15, 0.9098039216);
 }
-body:not(.cancel-nav-item-color) .tree-item-self:is(:hover, .is-active, .is-selected, .is-being-renamed) {
+body:not(.cancel-nav-item-color) .tree-item:not(.graph-control-section) .tree-item-self:is(:hover, .is-active, .is-selected, .is-being-renamed) {
   --icon-color: var(--nav-item-color-hover);
   --nav-collapse-icon-color: var(--res-bg4);
 }
-body:not(.cancel-nav-item-color) .tree-item-self:is(:hover, .is-active, .is-selected, .is-being-renamed) .nav-file-tag {
+body:not(.cancel-nav-item-color) .tree-item:not(.graph-control-section) .tree-item-self:is(:hover, .is-active, .is-selected, .is-being-renamed) .nav-file-tag {
   color: var(--res-bg4);
   outline: 1px solid var(--res-bg4);
 }
-body:not(.cancel-nav-item-color) .tree-item-self:is(:hover, .is-active, .is-selected, .is-being-renamed) .tree-item-flair {
+body:not(.cancel-nav-item-color) .tree-item:not(.graph-control-section) .tree-item-self:is(:hover, .is-active, .is-selected, .is-being-renamed) .tree-item-flair {
   color: var(--res-bg4);
 }
-body:not(.cancel-nav-item-color) .tree-item-self.is-being-renamed {
+body:not(.cancel-nav-item-color) .tree-item:not(.graph-control-section) .tree-item-self.is-being-renamed {
   background-color: var(--res-tx-accent);
   caret-color: var(--res-bg4);
   --text-selection: hsla(calc(var(--res-ax0-h) + 180), 100%, 50%, 0.2);
 }
-body:not(.cancel-nav-item-color) .tree-item.nav-folder.is-being-dragged-over > .nav-folder-title.is-selected {
+body:not(.cancel-nav-item-color) .tree-item:not(.graph-control-section) .tree-item.nav-folder.is-being-dragged-over > .nav-folder-title.is-selected {
   color: var(--res-bg4);
 }
-body:not(.cancel-nav-item-color) .search-result .search-result-file-title {
+body:not(.cancel-nav-item-color) .tree-item:not(.graph-control-section) .search-result .search-result-file-title {
   color: var(--nav-item-color);
 }
-body:not(.cancel-nav-item-color) .search-result .tree-item-self:hover .tree-item-icon.collapse-icon {
+body:not(.cancel-nav-item-color) .tree-item:not(.graph-control-section) .search-result .tree-item-self:hover .tree-item-icon.collapse-icon {
   --nav-collapse-icon-color: var(--res-tx-accent);
   background: var(--res-bg4);
   border-radius: inherit;
 }
 
-.tree-item-self.nav-folder-title {
+.tree-item-self:is(.nav-folder-title, .mod-collapsible) {
   font-weight: bold;
   --nav-item-weight-hover: bold;
 }
@@ -2618,6 +2622,7 @@ body:not(.cancel-nav-item-color) .search-result .tree-item-self:hover .tree-item
   --icon-color-focused: var(--res-bg4);
   --tab-text-color-focused-active-current: var(--res-bg4);
   --background-modifier-hover: var(--res-tx-accent);
+  --tab-text-color-focused-active: var(--res-bg4);
 }
 
 /*# sourceMappingURL=theme.css.map */
